--- a/index.css
+++ b/index.css
@@ -28,10 +28,6 @@ section {
     border-radius: 13px;
 }
 
-nav {
-    display: none;
-}
-
 .logo {
     color: var(--primary-color);
     font-weight: 800;
@@ -97,3 +93,72 @@ h1 {
 .cta:hover {
     background: var(--primary-color);
 }
+
+nav {
+    position: fixed;
+    z-index: 1;
+    background: #2C2931;
+    left: 0;
+    top: 0;
+    height: 100vh;
+    max-width: 300px;
+}
+
+nav ul {
+    list-style-type: none;
+    padding: 0;
+    width: 100%;
+} 
+
+nav ul li a {
+    color: white; 
+    text-decoration: none;
+    display: block;
+    padding: .875em 5em .875em 4em;
+}
+
+nav ul li a:hover {
+    background: #413E47;
+}
+
+
+.back-btn {
+    transform: scaleX(-1);
+    padding: 3em 4em 2em;
+    cursor: pointer;
+    transition: transform .3s;
+}
+.back-btn:hover {
+    transform: scaleX(-1) translateX(6px);
+}
+
+
+.active {
+    background: var(--primary-color)
+}
+
+.active:hover {
+    background: #4497FF;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
