--- a/index.css
+++ b/index.css
@@ -28,6 +28,7 @@ section {
     border-radius: 13px;
 }
 
+
 .logo {
     color: var(--primary-color);
     font-weight: 800;
@@ -110,11 +111,15 @@ nav ul {
     list-style-type: none;
     padding: 0;
     width: 100%;
-} 
+}
+
+nav ul li {
+    width: 100%;
+}
 
 nav ul li a {
-    color: white; 
     text-decoration: none;
+    color: white;
     display: block;
     padding: .875em 5em .875em 4em;
 }
@@ -122,7 +127,6 @@ nav ul li a {
 nav ul li a:hover {
     background: #413E47;
 }
-
 
 .back-btn {
     transform: scaleX(-1);
@@ -134,19 +138,19 @@ nav ul li a:hover {
     transform: scaleX(-1) translateX(6px);
 }
 
-
-.active {
-    background: var(--primary-color)
+.active  {
+    background: var(--primary-color);
 }
-
-.active:hover {
+.active:hover  {
     background: #4497FF;
 }
+
 
 @media only screen and (min-width: 700px) {
     .left-col {
         display: flex;
     }
+    
     .content p {
         width: 70%;
     }
@@ -155,20 +159,22 @@ nav ul li a:hover {
 
 @media only screen and (min-width: 1000px) {
     nav {
-        position: unset; 
+        position: unset;
         transform: translateX(0) !important;
-        border-radius: unset ;
+        border-radius: unset;
         border-top-left-radius: 13px;
         border-bottom-left-radius: 13px;
-        height: 100% ;
+        height: 100%;
     }
-    .menu-btn,
-    .back-btn {
+    
+    .menu-btn, .back-btn {
         display: none;
     }
+    
     ul {
         margin-top: 4em;
     }
+    
     header {
         padding: 1.6em;
     }
@@ -179,6 +185,7 @@ nav ul li a:hover {
     .logo {
         text-align: left;
     }
+    
     section {
         border-radius: unset;
         border-top-right-radius: 13px;
@@ -193,24 +200,4 @@ nav ul li a:hover {
         justify-self: left;
         margin-left: 4em;
     }
-
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
